Upgrade Java from 11 to 21 using OpenRewrite migration recipe